--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -737,7 +737,7 @@ h4 {
   position: absolute;
   left: -100px;
   top: 100px;
-  font-size: 3.5em;
+  font-size: 3.5rem;
   border-radius: 50%;
   width: 55px;
   height: 55px;
@@ -747,7 +747,8 @@ h4 {
 }
 
 #all_rankings-section .card-image {
-  width: 150px;
+  min-width: 150px;
+  max-width: 150px;
 }
 
 .space-y-0 > :not(template) ~ :not(template) {
